# CGZombieRunner

./: .gitignore  CMakeLists.txt  DreamCar.cpp  GLUTcar.cpp  readme.txt
include/: Camera.h  Mesh.h  Model.h  Shader.h  stb_image.h
include/glad/: glad.h
old_files/: LightingCube.cpp  bezierSurface1.cpp  draw_eclipse.cpp  exampleBezier.cpp  oldstyle.txt
shaders/: basic.frag  basic.vert  lamp.frag  lamp.geom.glsl  lamp.vert  lighting.frag  lighting.vert
src/: Mesh.cpp  Model.cpp  Shader.cpp  glad.c
